--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:text="No History currently available." />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/user_history_rv"
+            android:id="@+id/user_history_rv1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
