--- a/app/src/main/res/layout/user_history_rv.xml
+++ b/app/src/main/res/layout/user_history_rv.xml
@@ -10,6 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/id1"
         android:layout_height="120dp"
         android:background="#FFFFFF"
         android:layout_marginTop="5dp"
@@ -17,13 +18,40 @@
         android:orientation="vertical">
 
 
+    <LinearLayout
+        android:id="@+id/i1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:paddingLeft="5dp"
+        android:layout_gravity="center_vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="0dp"
             android:paddingLeft="5dp"
+            android:layout_gravity="center_vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="16dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical"
+                android:textColor="#c0c0c0"
+                android:text="Date :"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="0dp"
+            android:paddingLeft="2dp"
             android:layout_gravity="center_vertical">
 
             <TextView
@@ -37,26 +65,59 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            android:paddingLeft="5dp"
-            android:layout_gravity="center_vertical">
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="16dp"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical"
-                android:textColor="#000000"
-                android:id="@+id/tutor_profile_phone_number2"/>
+    <LinearLayout
+        android:id="@+id/i2"
+        android:layout_below="@id/i1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:paddingLeft="5dp"
+        android:layout_gravity="center_vertical">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="0dp"
+        android:paddingLeft="5dp"
+        android:layout_gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="16dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:textColor="#c0c0c0"
+            android:text="Deals ID :"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="0dp"
+        android:paddingLeft="2dp"
+        android:layout_gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="16dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:textColor="#000000"
+            android:id="@+id/tutor_profile_phone_number2"/>
+        </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/i3"
+            android:layout_below="@id/i2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -64,15 +125,42 @@
             android:paddingLeft="5dp"
             android:layout_gravity="center_vertical">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="16dp"
-                android:textColor="#000000"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical"
-                android:id="@+id/tutor_profile_phone_number"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="0dp"
+                android:paddingLeft="5dp"
+                android:layout_gravity="center_vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="16dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textColor="#c0c0c0"
+                    android:text="Status :"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="0dp"
+                android:paddingLeft="2dp"
+                android:layout_gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="16dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textColor="#008000"
+                    android:id="@+id/tutor_profile_phone_number"/>
+            </LinearLayout>
         </LinearLayout>
 
 
